LendersApp/src/objects/Underwriter_Assignment_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Load_Balancing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load Balancing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quotas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quotas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Underwriter_Assignment_Template__c</fullName>
        <label>Underwriter Assignment Template</label>
        <referenceTo>Underwriter_Assignment_Template__c</referenceTo>
        <relationshipLabel>Underwriter Assignment Rules</relationshipLabel>
        <relationshipName>Underwriter_Assignment_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Underwriter Assignment Rule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Underwriter Assignment Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Sort_Order_Higher_Than_0</fullName>
        <active>true</active>
        <errorConditionFormula>Sort_Order__c &lt; 1</errorConditionFormula>
        <errorMessage>Sort order must be higher than 0.</errorMessage>
    </validationRules>
</CustomObject>